🚧 (frontend) fixed spacing of accordion

--- a/frontend/src/app/help-page/help-page.component.sass
+++ b/frontend/src/app/help-page/help-page.component.sass
@@ -27,6 +27,7 @@
 .top-bar
     height: 260px
     width: 100vw
+    margin-bottom: 1rem
     background-color: #037fff
     border-bottom-left-radius: 80px
     border-bottom-right-radius: 80px
